--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
+  "name": "eariassotonodejs",
+  "description": "Aplicaciones basicas en node.js",
+  "repository": "https://github.com/eariassoto/eariassotonodejs",
   "keywords": ["node", "express", "static"]
 }
